--- a/src/Components/Timer/Timer.css
+++ b/src/Components/Timer/Timer.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Space+Mono&effect=outline');
+@import url('https://fonts.googleapis.com/css?family=Kanit&effect=outline');
 
 .timer{
     height: 50%;
     width: 50%;
     font-family: Space Mono, sans-serif;
-    font-size: 2em;
+    font-size: 2.5em;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #ffffff;
 }
 
 .timer span{
@@ -18,4 +20,26 @@
 .timers{
     margin-left: 0.5rem;
     margin-right: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#work-or-break{
+    font-family: Kanit, sans-serif;
+    color: aliceblue;
+    font-size: 2rem;
+}
+
+.buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.buttons button {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    width: 100%;
 }
